[gd_scene load_steps=10 format=2]

[ext_resource path="res://components/harvester/body/Body.gd" type="Script" id=1]
[ext_resource path="res://components/harvester/module_chooser_popup/ModuleChooserPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://components/harvester/body/body_chain/BodyChainImage.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/harvester/body/body_chain/BodyChain.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/harvester/body/body_jet/BodyJet.tscn" type="PackedScene" id=5]
[ext_resource path="res://components/harvester/body/body_spider/BodySpider.tscn" type="PackedScene" id=6]
[ext_resource path="res://components/harvester/body/body_spider/BodySpiderAnimation.tscn" type="PackedScene" id=7]
[ext_resource path="res://components/harvester/body/body_jet/BodyJetAnimation.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 100 )

[node name="Body" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Modules" type="Node2D" parent="."]

[node name="BodyChain" parent="Modules" instance=ExtResource( 4 )]
position = Vector2( 0, 100 )

[node name="BodyJet" parent="Modules" instance=ExtResource( 5 )]
visible = false

[node name="BodySpider" parent="Modules" instance=ExtResource( 6 )]
visible = false

[node name="ModuleChooserPopup" parent="." instance=ExtResource( 2 )]
margin_top = 90.0
margin_bottom = 90.0

[node name="BodyChain" parent="ModuleChooserPopup" groups=["module"] instance=ExtResource( 3 )]
light_mask = 0
position = Vector2( 0, 10 )

[node name="BodySpider" parent="ModuleChooserPopup" groups=["module"] instance=ExtResource( 7 )]
position = Vector2( 0, -50 )

[node name="BodyJet" parent="ModuleChooserPopup" groups=["module"] instance=ExtResource( 8 )]
position = Vector2( 0, -84 )

[connection signal="deselected" from="." to="." method="_on_Body_deselected"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="selected" from="." to="." method="_on_Body_selected"]
[connection signal="module_chosen" from="ModuleChooserPopup" to="." method="_on_ModuleChooser_module_chosen"]
